add key 'w' to get guidelines

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,8 @@ https://opensource.org/licenses/MIT
      <button id="revise-btn" onClick="draw()">Not Satisfied.</button>
      <button id="revise-btn" onClick="save()">Save.</button>
    </div>
-   <div><h4>There are total <b id="number" style="color:red">{{num_f}}</b> new data right now</h4></div>
+   <div><h4 id="guides">Hit <b style="color:red">"Not Satisfied"</b> and draw rectangle on above image to create new data</h4></div>
+   <div><h4>Click <b style="color:red">"Save"</b> to save modified data; There are total <b id="number" style="color:red">{{num_f}}</b> new data right now</h4></div>
  </div>
  <script src="static/js/index.js" type="text/javascript"></script>
 
