--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,8 @@ https://opensource.org/licenses/MIT
 
 
      <p id="warning" class="result-color"></p>
-     <p class="result-color">
-       The result is:
+     <p class="result-color" id="res">
+       Ladder in the image? <b style="color:red">YES</b>
      </p>
      <input name="imgFile" type="file" id="fileUploader" accept="image/*" onChange="handleFiles()">
    </div>
